# tinystring

./: .gitignore  CMakeLists.txt  README.md  String.cpp  String.h  main.cpp  sample8.json
res/: sample2.txt
src/: FString.cpp  FString.h  Str.cpp  Str.h  String.cpp  String.h  main.cpp  types.h  utf_utils.h
test/: FString_test.cpp  Str_test.cpp  test.cpp  test_main.cpp
